fix(homeworks_5): finish part_8 - added body tag in templates

--- a/homework_5_Django_intro/mysite/polls/templates/polls/index.html
+++ b/homework_5_Django_intro/mysite/polls/templates/polls/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html>
+
 {% load static %}
 
+
+<body>
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 {% if latest_question_list %}
@@ -11,3 +16,5 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+</body>
+</html>
