--- a/homework_5_Django_intro/mysite/polls/templates/polls/detail.html
+++ b/homework_5_Django_intro/mysite/polls/templates/polls/detail.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+
+<body>
+
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 <fieldset>
@@ -10,3 +15,6 @@
 </fieldset>
 <input type="submit" value="Vote">
 </form>
+
+</body>
+</html>
