--- a/homework_5_Django_intro/mysite/polls/templates/polls/results.html
+++ b/homework_5_Django_intro/mysite/polls/templates/polls/results.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+
+<body>
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +11,6 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+
+</body>
+</html>
